# HavanaEngine

./: .gitignore  CMakeLists.txt  GetDXC.ps1  Havana.sln  Makefile  README.md  premake5.lua
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Makefile  packages.config
Engine/Common/: CommonHeaders.h  Id.h  PrimitiveTypes.h
Engine/Components/: ComponentsCommon.h  Entity.cpp  Entity.h  Script.cpp  Script.h  Sript.h  Transform.cpp  Transform.h
Engine/Content/: ContentLoader.cpp  ContentLoader.h  ContentLoaderLinux.cpp  ContentLoaderWin32.cpp  ContentToEngine.cpp  ContentToEngine.h
Engine/Core/: Engine.cpp  EngineWin32.cpp  Main.cpp  MainWin32.cpp
Engine/EngineAPI/: Camera.h  GameEntity.h  Input.h  Light.h  ScriptComponent.h  TransformComponent.h
Engine/Graphics/: GraphicsPlatform.cpp  GraphicsPlatform.h  GraphicsPlatformInterface.h  Renderer.cpp  Renderer.h
Engine/Graphics/Direct3D12/: D3D12Camera.cpp  D3D12Camera.h  D3D12CommonHeaders.h  D3D12Content.cpp  D3D12Content.h  D3D12Core.cpp  D3D12Core.h  D3D12GPass.cpp  D3D12GPass.h  D3D12Helpers.cpp  D3D12Helpers.h  D3D12Interface.cpp  D3D12Interface.h  D3D12Light.cpp  D3D12Light.h  D3D12LightCulling.cpp  D3D12LightCulling.h  D3D12PostProcess.cpp  D3D12PostProcess.h  D3D12Resources.cpp  D3D12Resources.h  D3D12Shaders.cpp  D3D12Shaders.h  D3D12Surface.cpp  D3D12Surface.h  D3D12Upload.cpp  D3D12Upload.h  D3DCore.cpp  (+1 more)
Engine/Input/: Input.cpp  Input.h  InputLinux.cpp  InputLinux.h  InputWin32.cpp  InputWin32.h
Engine/Utilities/: FreeList.h  IOStream.h  Math.h  MathTypes.h  Utilities.h  Vector.h
(+177 files in other folders)
